Fixed post overflow due to uncontrolled width

--- a/src/styles/renderer.scss
+++ b/src/styles/renderer.scss
@@ -608,7 +608,6 @@
   // Code blocks
   pre {
     overflow-x: auto;
-    width: 100%;
     background-color: var(--tt-codeblock-bg);
     border: 1px solid var(--tt-codeblock-border);
     margin-top: 1.5em;
